--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -381,3 +381,11 @@ p.change_link{
 	height: 90px;
 	background: transparent;
 }
+.change_asdfsd{
+    color: black;
+    margin-top: 80px;
+    font-size: 20px;
+    text-decoration: none;
+    margin-left: 220px;
+    
+}
